@@ -1,3 +1,4 @@
+	* made uTP re-enter slow-start after time-out
 	* fixed uTP upload performance issue
 	* fix missing support for DHT put salt
 
